Add shopping cart service, functionality for adding things to cart and computed property to calculate cart total

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -13,6 +13,9 @@
       {{#link-to 'admin'}}
         Admin
       {{/link-to}}
+      {{#link-to 'cart'}}
+        {{fa-icon 'shopping-cart'}}
+      {{/link-to}}
     </div>
   </nav>
 </div>
