--- a/app/templates/store.hbs
+++ b/app/templates/store.hbs
@@ -1,4 +1,4 @@
-{{feature-display featureds=model.featured}}
+{{feature-display featured=model.featured}}
 
 {{#each model.items as |item|}}
   {{item-display item=item}}
