--- a/app/templates/components/feature-display.hbs
+++ b/app/templates/components/feature-display.hbs
@@ -5,8 +5,7 @@
   </div>
   <div class="col-sm-6">
     <h3>{{item.name}}</h3>
-    <p>
-      ${{item.price}}
+    <p>${{item.price}}</p>
     <h4>{{#link-to 'item' item.id}}Buy now{{/link-to}}</h4>
   </div>
   {{/each}}
