Begin adding functionality for increasing and decreasing items in cart

--- a/app/templates/components/cart-display.hbs
+++ b/app/templates/components/cart-display.hbs
@@ -23,7 +23,7 @@
     <p>${{item.item.price}}.00</p>
   </div>
   <div class="col-sm-2">
-    <p>{{item.quantity}}</p>
+    <p>{{fa-icon 'plus-circle'}} {{item.quantity}} {{fa-icon 'minus-circle'}}</p>
   </div>
   <div class="col-sm-2">
     <p>{{quantity-price item.item.price item.quantity}}</p>
